// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders default 1`] = `
<input
  aria-invalid="false"
  class="w-full rounded border border-outline bg-surface-container-lowest px-3 py-2 text-body-md text-on-surface focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary disabled:bg-surface-container disabled:cursor-not-allowed disabled:opacity-60 transition-colors duration-150"
  name="email"
/>
`;

exports[`Input renders with error 1`] = `
<input
  aria-invalid="true"
  class="w-full rounded border bg-surface-container-lowest px-3 py-2 text-body-md text-on-surface focus:outline-none focus:ring-2 disabled:bg-surface-container disabled:cursor-not-allowed disabled:opacity-60 transition-colors duration-150 border-error focus:ring-error focus:border-error"
  name="email"
/>
`;
